@@ -4,7 +4,7 @@
 
 Java implementation of binomial heaps.
 
-## Implementation
+# Implementation
 
 The operations implemented include:
 
@@ -18,3 +18,16 @@ The operations implemented include:
 - arrayToHeap
 - findNodeWithValue
 - visualize
+
+# Implement User Interface
+
+Using Eclipse IDE Dev:
+**Step 1**: Download Javafx(https://openjfx.io/)
+
+**Step 2**: 
+
+In IDE Right-click on **project**->**Run As** -> **Run Configuration** ->**Arguments**->**VM Arguments**
+
+For Windows,
+
+--module-path "\path to javafx\lib" --add-modules javafx.controls,javafx.fxml
